[tool.poetry]
name = "Courtside Analytics"
version = "0.1.0"
description = "an AI tool that enables you to dive deeper into NBA statistics via language"
authors = ["Jinal.Shah <28205508+JinalShah2002@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
