[tool.poetry]
name = "Courtside Analytics"
version = "0.1.0"
description = "an AI tool that enables you to dive deeper into NBA statistics via language"
authors = ["Jinal.Shah <28205508+JinalShah2002@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.36.0"
openai = "^1.37.0"
langchain = "^0.2.11"
langchain-openai = "^0.1.17"
beautifulsoup4 = "^4.12.3"
langchain-core = "^0.2.23"
numexpr = "^2.10.1"
langchainhub = "^0.1.20"
duckduckgo-search = "^6.2.3"
langchain-community = "^0.2.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
